add filter by all/done/undone status

--- a/index.html
+++ b/index.html
@@ -28,6 +28,19 @@
                 <div class="input-group mb-3">
                     <input v-model="keyword" type="text" class="form-control" placeholder="Search">
                 </div>
+                <div class="input-group mb-3">
+                    <div class="btn-group btn-group-toggle" >
+                        <label class="btn btn-outline-primary" :class="{active: showingOption == 'All'}">
+                            <input type="radio" value="All" v-model="showingOption"> All
+                        </label>
+                        <label class="btn btn-outline-primary" :class="{active: showingOption == 'Done'}">
+                            <input type="radio" value="Done" v-model="showingOption"> Done
+                        </label>
+                        <label class="btn btn-outline-primary" :class="{active: showingOption == 'Undone'}">
+                            <input type="radio" value="Undone" v-model="showingOption"> Undone
+                        </label>
+                    </div>
+                </div>
                 <ul class="list-group">
                     <li class="list-group-item" v-for="task in filterTasksByKeyword(keyword)">
                         <span @click="markAsDone(task)" :class="{done: task.isDone}">{{ task.title }}</span>
@@ -37,6 +50,8 @@
         </div>
     </div>
 </div>
+
+
 
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
