--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
                     </div>
                 </div>
                 <ul class="list-group">
-                    <li class="list-group-item clearfix" v-for="(task, index) in filterTasksByKeyword(keyword)">
-                        <span @click="markAsDone(task)" :class="{done: task.isDone}">{{ task.title }}</span>
-                        <span @click="deleteTask(index)" class="float-right">
+                    <li class="list-group-item clearfix" v-for="task in filterTasksByKeyword(keyword)">
+                        <span @click="markAsDone(task)" :class="{done: task.isDone}">{{ task.title }} {{ task.uuid }}</span>
+                        <span @click="deleteTask(task)" class="float-right">
                             <i class="fa fa-times"></i>
                         </span>
                     </li>
