rm redundant arg title in task creation

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                         </select>
                     </div>
                     <div class="col-2">
-                        <button @click="createNewTask(title)" class="btn btn-outline-primary" type="button">Create</button>
+                        <button @click="createNewTask" class="btn btn-outline-primary" type="button">Create</button>
                     </div>
                 </div>
                 <hr>
